# sts-scs-motor-controller

./: .gitignore  Cargo.toml  README.md  docs.md
.github/workflows/: ci.yml
docs/: endstop_calibration.md
examples/: dummy_loop.rs
scripts/: calibrate_endstops.py
src/: control_loop.rs  conversion.rs  error.rs  lib.rs  model.rs  python.rs  transport.rs  transport_feetech.rs
tests/: control_loop_tests.rs  test_calibrate_endstops.py
